we design prograssing

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     </style>
 </head>
 
-<body  class="max-w-6xl mx-auto" >
+<body class="max-w-6xl mx-auto">
     <header class="bg-gradient-to-r from-[#FFFFFF] to-[#FFFFFF]">
         <!-- navbar -->
         <nav class="navbar">
             <div class="navbar-start">
-               
+
                 <div>
                     <i class="fa-solid fa-arrow-right -rotate-45 text-white bg-green-500 rounded-full p-2"></i>
                     <a class="btn btn-ghost text-xl">Rinterio</a>
@@ -89,17 +89,53 @@
         <!-- end of navbar -->
 
         <!-- banner -->
-         <div class="text-center">
+        <div class="text-center">
             <div class="flex justify-center">
                 <img src="assets/banner.png" alt="">
             </div>
-            <h2 class="text-3xl mb-4 md:text-6xl md:mb-6 font-extrabold ">A barn house of this design has a striking appearance</h2>
-            <p class="text-sm md:text-base mb-4 md:mb-8 max-w-4xl mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-            <button class="bg-green-300 rounded-full px-6 py-3 font-bold text-xl">View Details <i class="fa-solid fa-arrow-right -rotate-45 text-white bg-green-500 rounded-full p-2"></i></button>
-         </div>
+            <h2 class="text-3xl mb-4 md:text-6xl md:mb-6 font-extrabold ">A barn house of this design has a striking
+                appearance</h2>
+            <p class="text-sm md:text-base mb-4 md:mb-8 max-w-4xl mx-auto">The barn house captivates with its blend of
+                rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows
+                that flood the space with natural light.</p>
+            <button class="bg-green-300 rounded-full px-6 py-3 font-bold text-xl">View Details <i
+                    class="fa-solid fa-arrow-right -rotate-45 text-white bg-green-500 rounded-full p-2"></i></button>
+        </div>
     </header>
     <main>
-
+        <!-- we design -->
+        <div class="hero bg-base-200 min-h-screen">
+            <div class="hero-content flex items-center ">
+                <div>
+                    <div>
+                        <h1 class="text-5xl font-bold">We design thoughtful, liveable spaces</h1>
+                        <p class="py-6">
+                            The barn house captivates with its blend of rustic charm and
+                            modern sophistication, featuring weathered wood, sleek metal accents.
+                        </p>
+                    </div>
+                    <div class="flex gap-3 items-center bg-white mb-6 rounded-xl p-6">
+                        <img src="assets/commercial.png" alt="">
+                        <div>
+                            <h2 class="text-xl font-extrabold mb-2">Commercial</h2>
+                            <p class="text-base font-medium">The barn house captivates with its blend of rustic charm
+                                and modern.</p>
+                        </div>
+                    </div>
+                    <div class="flex gap-3 items-center bg-white mb-6 rounded-xl p-6">
+                        <img src="assets/residential.png" alt="">
+                        <div>
+                            <h2 class="text-xl font-extrabold mb-2">Residential</h2>
+                            <p class="text-base font-medium">The barn house captivates with its blend of rustic charm
+                                and modern.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-1/2">
+                    <img src="assets/article3.png" class="rounded-lg shadow-2xl"/>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
