lets connect section complete

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </section>
 
         <!-- Our work -->
-        <section class="max-w-6xl mx-auto pb-8 lg:pb-24">
+        <section class="max-w-6xl mx-auto lg:pb-24">
             <div class="text-center">
                 <button class="font-bold mb-4 px-4 py-2 bg-white rounded-full"> <i
                         class="fa-solid fa-arrow-right  rounded-full p-2"></i> How we works</button>
@@ -155,9 +155,9 @@
         </section>
 
         <!-- Portfolio -->
-        <section class="bg-white lg:mt-24">
+        <section class="bg-gray-100 mb-2 lg:pb-24">
             <div class="max-w-6xl mx-auto rounded-2xl">
-                <div class="text-center bg-gray-100 lg:bg-white pb-8 lg:pt-20">
+                <div class="text-center bg-gray-100 lg:bg-white pb-8 pt-10 lg:pt-20">
                     <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F33] rounded-full"> <i
                             class="fa-solid fa-arrow-right  rounded-full p-2"></i> How we works</button>
                     <h2 class="text-4xl mb-4 lg:mb-6 font-bold">Our Works Process</h2>
@@ -165,7 +165,7 @@
                         rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
                 <!-- portfolio grid -->
-                <div class="grid grid-cols-1 bg-gray-100 lg:bg-white lg:grid-cols-8 gap-6">
+                <div class="grid grid-cols-1 bg-gray-100 lg:bg-white lg:grid-cols-8 gap-6 pb-10">
                     <div
                         class="flex gap-6 flex-col lg:flex-row items-center lg:col-span-5 p-6 border-2 border-gray-200 rounded-2xl bg-white">
                         <img class="w-full lg:w-fit" src="assets/img1.png" alt="">
@@ -203,6 +203,29 @@
                     </div>
                 </div>
         </section>
+
+        <!-- Project section -->
+         <section class="bg-gray-100 ">
+            <div class="max-w-6xl mx-auto ">
+                <div class="text-center pb-8 pt-3 lg:pt-20">
+                    <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F33] rounded-full"> <i
+                            class="fa-solid fa-arrow-right  rounded-full p-2"></i> Let's Connect</button>
+                    <h2 class="text-4xl mb-4 lg:mb-6 font-bold">Our Works Process</h2>
+                    <p class="font-medium w-full lg:w-[670px] lg:mx-auto">The barn house captivates with its blend of
+                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <!-- contact section -->
+                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                    <input class="p-5 rounded-full" type="text" name="" placeholder="First Name" id="">
+                    <input class="p-5 rounded-full" type="text" name="" placeholder="Last Name" id="">
+                    <input class="p-5 rounded-full" type="number" name="" placeholder="Phone Number" id="">
+                    <input class="p-5 rounded-full" type="email" name="" placeholder="Email" id="">
+                    <textarea class="lg:col-span-2 p-5 rounded-2xl" rows="10" name="" id="" placeholder="Type your message"></textarea>
+                    <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F] lg:col-span-2 rounded-full"> <i
+                        class="fa-solid fa-arrow-right  rounded-full p-2"></i> Send Mail</button>
+                 </div>
+            </div>
+         </section>
     </main>
 </body>
 
