complete footer section

--- a/index.html
+++ b/index.html
@@ -173,9 +173,10 @@
                             <h3 class="text-2xl font-extrabold mb-4 text-[#494949]">Commercial</h3>
                             <p class="font-medium mb-5">The barn house captivates with its blend of rustic charm and
                                 modern. The barn house captivates with its blend of rustic charm and modern .</p>
-                                <button class="font-extrabold text-lg text-[#212121]">View Details 
-                                    <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-green-400 rounded-full p-2"></i>
-                                </button>
+                            <button class="font-extrabold text-lg text-[#212121]">View Details
+                                <i
+                                    class="fa-solid fa-arrow-right text-white -rotate-45 bg-green-400 rounded-full p-2"></i>
+                            </button>
                         </div>
                     </div>
                     <div class="lg:col-span-3 p-6 border-2 border-gray-200 rounded-2xl bg-white">
@@ -186,17 +187,18 @@
                     </div>
 
                     <div
-                    class="flex gap-6 flex-col lg:flex-row items-center lg:col-span-4 border-2 border-gray-200 rounded-2xl p-6 bg-white">
-                    <img class="w-full lg:w-fit" src="assets/img1.png" alt="">
-                    <div>
-                        <h3 class="text-2xl font-extrabold mb-4 text-[#494949]">Commercial</h3>
-                        <p class="font-medium mb-5">The barn house captivates with its blend of rustic charm and
-                            modern. The barn house captivates with its blend of rustic charm and modern .</p>
-                        <button class="font-extrabold text-lg text-[#212121]">View Details 
-                            <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-green-400 rounded-full p-2"></i>
-                        </button>
+                        class="flex gap-6 flex-col lg:flex-row items-center lg:col-span-4 border-2 border-gray-200 rounded-2xl p-6 bg-white">
+                        <img class="w-full lg:w-fit" src="assets/img1.png" alt="">
+                        <div>
+                            <h3 class="text-2xl font-extrabold mb-4 text-[#494949]">Commercial</h3>
+                            <p class="font-medium mb-5">The barn house captivates with its blend of rustic charm and
+                                modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                            <button class="font-extrabold text-lg text-[#212121]">View Details
+                                <i
+                                    class="fa-solid fa-arrow-right text-white -rotate-45 bg-green-400 rounded-full p-2"></i>
+                            </button>
+                        </div>
                     </div>
-                </div>
 
                     <div class="lg:col-span-2 border-2 border-gray-200 rounded-2xl p-6 bg-white">
                         <img class="w-full h-full" src="assets/img5.png" alt="">
@@ -205,7 +207,7 @@
         </section>
 
         <!-- Project section -->
-         <section class="bg-gray-100 ">
+        <section class="bg-gray-100 ">
             <div class="max-w-6xl mx-auto ">
                 <div class="text-center pb-8 pt-3 lg:pt-20">
                     <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F33] rounded-full"> <i
@@ -215,18 +217,39 @@
                         rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
                 <!-- contact section -->
-                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                     <input class="p-5 rounded-full" type="text" name="" placeholder="First Name" id="">
                     <input class="p-5 rounded-full" type="text" name="" placeholder="Last Name" id="">
                     <input class="p-5 rounded-full" type="number" name="" placeholder="Phone Number" id="">
                     <input class="p-5 rounded-full" type="email" name="" placeholder="Email" id="">
-                    <textarea class="lg:col-span-2 p-5 rounded-2xl" rows="10" name="" id="" placeholder="Type your message"></textarea>
+                    <textarea class="lg:col-span-2 p-5 rounded-2xl" rows="10" name="" id=""
+                        placeholder="Type your message"></textarea>
                     <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F] lg:col-span-2 rounded-full"> <i
-                        class="fa-solid fa-arrow-right  rounded-full p-2"></i> Send Mail</button>
-                 </div>
+                            class="fa-solid fa-arrow-right  rounded-full p-2"></i> Send Mail</button>
+                </div>
             </div>
-         </section>
+        </section>
     </main>
+    <footer class="bg-[#1C1C1C] lg:mt-20 mt-10 pb-10 lg:pb-20 px-2 lg:px-0">
+        <div class="pt-10 lg:pt-20 w-full lg:max-w-2xl mx-auto text-center">
+            <button class="font-extrabold text-3xl text-white"><i
+                    class="fa-solid fa-arrow-right text-black -rotate-45 bg-green-400 rounded-full p-2"></i>
+                Rinterio</button>
+            <p class="font-medium text-[#737373] mt-4">The barn house captivates with its blend of rustic charm and
+                modern sophistication, featuring weathered wood, sleek metal accents.</p>
+        </div>
+        <ul class="text-[#737373] flex flex-col lg:flex-row max-w-3xl mx-auto items-center gap-8 mt-8 lg:justify-between lg:mt-12">
+            <li><a>Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Portfolio</a></li>
+            <li><a>Blogs</a></li>
+            <li><a>Contact Us</a></li>
+        </ul>
+        <div class="bg-[#ABEF5F] mx-auto mt-8 lg:mt-12 text-center px-5 py-3 rounded-full w-full lg:w-fit">
+            <button class="text-xl font-extrabold">Book Consult <i
+                    class="fa-solid fa-arrow-right text-white -rotate-45 bg-black rounded-full p-2"></i></button>
+        </div>
+    </footer>
 </body>
 
 </html>
