--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </style>
 </head>
 
-<body class="bg-gray-100 sm:px-5">
-    <header class="max-w-6xl mx-auto">
-        <div class="navbar">
+<body>
+    <header class="bg-gray-100 px-5 lg:px-0">
+        <div class="navbar max-w-6xl mx-auto">
             <div class="navbar-start gap-2">
                 <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-green-400 rounded-full p-2"></i>
                 <button class="text-3xl font-extrabold">Rinterio</button>
@@ -40,17 +40,17 @@
                 </ul>
             </div>
             <div class="navbar-end gap-2">
-                    <div class="dropdown dropdown-end lg:hidden">
-                        <div tabindex="0" role="button" class="btn m-1"><i class="fa-solid fa-bars"></i></div>
-                        <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
-                            <li><a>Home</a></li>
-                            <li><a>Services</a></li>
-                            <li><a>Portfolio</a></li>
-                            <li><a>Blogs</a></li>
-                            <li><a>Contact Us</a></li>
-                        </ul>
-                      </div>
-                
+                <div class="dropdown dropdown-end lg:hidden">
+                    <div tabindex="0" role="button" class="btn m-1"><i class="fa-solid fa-bars"></i></div>
+                    <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow">
+                        <li><a>Home</a></li>
+                        <li><a>Services</a></li>
+                        <li><a>Portfolio</a></li>
+                        <li><a>Blogs</a></li>
+                        <li><a>Contact Us</a></li>
+                    </ul>
+                </div>
+
                 <div class="hidden lg:block">
                     <div class="flex items-center gap-2">
                         <i class="fa-solid fa-magnifying-glass bg-white rounded-full p-2"></i>
@@ -65,19 +65,94 @@
         </div>
 
         <!-- banner -->
-         <div>
+        <div class="max-w-6xl mx-auto pb-10">
             <div class="flex justify-center">
                 <img src="assets/banner.png" alt="">
             </div>
             <div class="text-center">
-                <h2 class="text-3xl lg:text-6xl font-extrabold">A barn house of this design has a striking appearance</h2>
-                <p class="font-medium lg:px-28 mb-5 mt-4 lg:mt-6 lg:mb-8">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
+                <h2 class="text-3xl lg:text-6xl font-extrabold">A barn house of this design has a striking appearance
+                </h2>
+                <p class="font-medium lg:px-28 mb-5 mt-4 lg:mt-6 lg:mb-8">The barn house captivates with its blend of
+                    rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large
+                    windows that flood the space with natural light.</p>
+                <button class="lg:px-6 py-3 bg-[#ABEF5F80] rounded-full font-bold text-xl w-full lg:w-fit">View Details
+                    <i class="fa-solid fa-arrow-right  -rotate-45 bg-green-400 rounded-full p-2"></i>
+                </button>
             </div>
-         </div>
-        </header>
-        <main>
+        </div>
+    </header>
+    <main class="bg-gray-100 px-5 lg:px-0">
+        <!-- We Design -->
+        <section class="max-w-6xl mx-auto mt-10 lg:mt-20  py-8 lg:py-20 relative">
 
-        </main>
+            <img class="hidden lg:block absolute top-5 -left-6" src="assets/Vector.png" alt="">
+
+            <div class="flex flex-col lg:flex-row justify-between gap-10">
+                <div class="w-full lg:w-[560px]">
+                    <div class="text-center lg:text-start">
+                        <button class="font-bold px-4 py-2 bg-white rounded-full"> <i
+                                class="fa-solid fa-arrow-right  rounded-full p-2"></i> About Us</button>
+                        <h2 class="mt-4 mb-6 text-4xl font-bold">We design thoughtful, liveable spaces</h2>
+                        <p class="font-medium mb-6">The barn house captivates with its blend of rustic charm and
+                            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    </div>
+                    <div class="flex items-center gap-6 bg-white rounded-lg p-6 mb-6">
+                        <img src="assets/residential.png" alt="">
+                        <div>
+                            <h4 class="text-xl font-extrabold mb-3">Commercial</h4>
+                            <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex items-center gap-6 bg-white rounded-lg p-6">
+                        <img src="assets/residential.png" alt="">
+                        <div>
+                            <h4 class="text-xl font-extrabold mb-3">Commercial</h4>
+                            <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full lg:w-[560px]">
+                    <img class="h-full" src="assets/Rectangle.png" alt="">
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Our work -->
+         <section class="max-w-6xl mx-auto">
+            <div class="text-center">
+                <button class="font-bold mb-4 px-4 py-2 bg-white rounded-full"> <i
+                    class="fa-solid fa-arrow-right  rounded-full p-2"></i> How we works</button>
+                <h2 class="text-4xl mb-4 lg:mb-6 font-bold">Our Works Process</h2>
+                <p class="font-medium w-full lg:w-[670px] lg:mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+            <!-- our work grid -->
+             <div class="grid grid-cols-1 lg:grid-cols-4 gap-6 mt-8">
+                <div class="bg-[#E7C1D3] rounded-2xl p-6">
+                    <img src="assets/concept.png" alt="">
+                    <h4 class="text-xl font-extrabold my-3">Concept</h4>
+                    <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class="bg-[#EFDA6E] rounded-2xl p-6">
+                    <img src="assets/flow-chart.png" alt="">
+                    <h4 class="text-xl font-extrabold my-3">Design Process</h4>
+                    <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class="bg-[#A4DAC3] rounded-2xl p-6">
+                    <img src="assets/vision.png" alt="">
+                    <h4 class="text-xl font-extrabold my-3">Supervision</h4>
+                    <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+                <div class="bg-[#77AAEA] rounded-2xl p-6">
+                    <img src="assets/budget-planning.png" alt="">
+                    <h4 class="text-xl font-extrabold my-3">Budget Planning</h4>
+                    <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
+                </div>
+             </div>
+         </section>
+    </main>
 </body>
 
 </html>
