complete portfolio section

--- a/index.html
+++ b/index.html
@@ -121,15 +121,16 @@
         </section>
 
         <!-- Our work -->
-         <section class="max-w-6xl mx-auto">
+        <section class="max-w-6xl mx-auto pb-8 lg:pb-24">
             <div class="text-center">
                 <button class="font-bold mb-4 px-4 py-2 bg-white rounded-full"> <i
-                    class="fa-solid fa-arrow-right  rounded-full p-2"></i> How we works</button>
+                        class="fa-solid fa-arrow-right  rounded-full p-2"></i> How we works</button>
                 <h2 class="text-4xl mb-4 lg:mb-6 font-bold">Our Works Process</h2>
-                <p class="font-medium w-full lg:w-[670px] lg:mx-auto">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="font-medium w-full lg:w-[670px] lg:mx-auto">The barn house captivates with its blend of rustic
+                    charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
             </div>
             <!-- our work grid -->
-             <div class="grid grid-cols-1 lg:grid-cols-4 gap-6 mt-8">
+            <div class="grid grid-cols-1 lg:grid-cols-4 gap-6 mt-8">
                 <div class="bg-[#E7C1D3] rounded-2xl p-6">
                     <img src="assets/concept.png" alt="">
                     <h4 class="text-xl font-extrabold my-3">Concept</h4>
@@ -150,8 +151,58 @@
                     <h4 class="text-xl font-extrabold my-3">Budget Planning</h4>
                     <p class="font-medium">The barn house captivates with its blend of rustic charm and modern.</p>
                 </div>
-             </div>
-         </section>
+            </div>
+        </section>
+
+        <!-- Portfolio -->
+        <section class="bg-white lg:mt-24">
+            <div class="max-w-6xl mx-auto rounded-2xl">
+                <div class="text-center bg-gray-100 lg:bg-white pb-8 lg:pt-20">
+                    <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F33] rounded-full"> <i
+                            class="fa-solid fa-arrow-right  rounded-full p-2"></i> How we works</button>
+                    <h2 class="text-4xl mb-4 lg:mb-6 font-bold">Our Works Process</h2>
+                    <p class="font-medium w-full lg:w-[670px] lg:mx-auto">The barn house captivates with its blend of
+                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <!-- portfolio grid -->
+                <div class="grid grid-cols-1 bg-gray-100 lg:bg-white lg:grid-cols-8 gap-6">
+                    <div
+                        class="flex gap-6 flex-col lg:flex-row items-center lg:col-span-5 p-6 border-2 border-gray-200 rounded-2xl bg-white">
+                        <img class="w-full lg:w-fit" src="assets/img1.png" alt="">
+                        <div>
+                            <h3 class="text-2xl font-extrabold mb-4 text-[#494949]">Commercial</h3>
+                            <p class="font-medium mb-5">The barn house captivates with its blend of rustic charm and
+                                modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                                <button class="font-extrabold text-lg text-[#212121]">View Details 
+                                    <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-green-400 rounded-full p-2"></i>
+                                </button>
+                        </div>
+                    </div>
+                    <div class="lg:col-span-3 p-6 border-2 border-gray-200 rounded-2xl bg-white">
+                        <img class="w-full" src="assets/img2.png" alt="">
+                    </div>
+                    <div class="lg:col-span-2 border-2 border-gray-200 rounded-2xl p-6 bg-white">
+                        <img class="w-full h-full" src="assets/img3.png" alt="">
+                    </div>
+
+                    <div
+                    class="flex gap-6 flex-col lg:flex-row items-center lg:col-span-4 border-2 border-gray-200 rounded-2xl p-6 bg-white">
+                    <img class="w-full lg:w-fit" src="assets/img1.png" alt="">
+                    <div>
+                        <h3 class="text-2xl font-extrabold mb-4 text-[#494949]">Commercial</h3>
+                        <p class="font-medium mb-5">The barn house captivates with its blend of rustic charm and
+                            modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                        <button class="font-extrabold text-lg text-[#212121]">View Details 
+                            <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-green-400 rounded-full p-2"></i>
+                        </button>
+                    </div>
+                </div>
+
+                    <div class="lg:col-span-2 border-2 border-gray-200 rounded-2xl p-6 bg-white">
+                        <img class="w-full h-full" src="assets/img5.png" alt="">
+                    </div>
+                </div>
+        </section>
     </main>
 </body>
 
