--- a/index.html
+++ b/index.html
@@ -154,13 +154,56 @@
             </div>
         </section>
 
+        <!-- Explore home in your town -->
+        <section class="bg-gray-100 mb-2 lg:pb-24">
+            <div class="max-w-6xl mx-auto rounded-2xl">
+                <div class="text-center bg-gray-100 lg:bg-white pb-8 pt-10 lg:pt-20 rounded-2xl">
+                    <h2 class="text-4xl mb-4 lg:mb-6 font-bold uppercase">Explore Home in your Town</h2>
+                    <p class="font-medium w-full lg:w-[670px] lg:mx-auto">The barn house captivates with its blend of
+                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <div class="grid grid-cols-2 lg:grid-cols-4 gap-3 p-2 lg:gap-4 lg:bg-white bg-gray-100 rounded-2xl lg:pt-5">
+                    <div
+                        class="bg-[url('assets/pic1.jpeg')] bg-no-repeat w-full bg-center bg-cover lg:row-span-2 rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Gazaria</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                    <div
+                        class="bg-[url('assets/pic2.webp')] bg-no-repeat w-full h-52 bg-center bg-cover rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Gazaria</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                    <div
+                        class="bg-[url('assets/pic3.jpg')] bg-no-repeat w-full h-52 bg-center bg-cover rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Kawnia</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                    <div
+                        class="bg-[url('assets/pic4.jpg')] bg-no-repeat w-full  bg-center bg-cover lg:row-span-2 rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Soloani</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                    <div
+                        class="bg-[url('assets/pic5.avif')] bg-no-repeat w-full h-52 bg-center bg-cover rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Karim Kha</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                    <div
+                        class="bg-[url('assets/pic6.jpg')] bg-no-repeat w-full h-52 bg-center bg-cover rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Santipur</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Portfolio -->
         <section class="bg-gray-100 mb-2 lg:pb-24">
             <div class="max-w-6xl mx-auto rounded-2xl">
                 <div class="text-center bg-gray-100 lg:bg-white pb-8 pt-10 lg:pt-20">
                     <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F33] rounded-full"> <i
-                            class="fa-solid fa-arrow-right  rounded-full p-2"></i> How we works</button>
-                    <h2 class="text-4xl mb-4 lg:mb-6 font-bold">Our Works Process</h2>
+                            class="fa-solid fa-arrow-right  rounded-full p-2"></i> Explore our Latest works</button>
+                    <h2 class="text-4xl mb-4 lg:mb-6 font-bold">Our Latest Portfolio</h2>
                     <p class="font-medium w-full lg:w-[670px] lg:mx-auto">The barn house captivates with its blend of
                         rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
@@ -206,10 +249,12 @@
                 </div>
         </section>
 
+
+
         <!-- Project section -->
-        <section class="bg-gray-100 ">
-            <div class="max-w-6xl mx-auto ">
-                <div class="text-center pb-8 pt-3 lg:pt-20">
+        <section class="bg-gray-100 mt-2 ">
+            <div class="max-w-6xl mx-auto bg-[url('assets/bg.jpg')] bg-no-repeat w-full">
+                <div class="text-center pb-8 pt-3 lg:pt-14">
                     <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F33] rounded-full"> <i
                             class="fa-solid fa-arrow-right  rounded-full p-2"></i> Let's Connect</button>
                     <h2 class="text-4xl mb-4 lg:mb-6 font-bold">Our Works Process</h2>
@@ -217,7 +262,7 @@
                         rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
                 <!-- contact section -->
-                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:pr-3">
                     <input class="p-5 rounded-full" type="text" name="" placeholder="First Name" id="">
                     <input class="p-5 rounded-full" type="text" name="" placeholder="Last Name" id="">
                     <input class="p-5 rounded-full" type="number" name="" placeholder="Phone Number" id="">
@@ -238,7 +283,8 @@
             <p class="font-medium text-[#737373] mt-4">The barn house captivates with its blend of rustic charm and
                 modern sophistication, featuring weathered wood, sleek metal accents.</p>
         </div>
-        <ul class="text-[#737373] flex flex-col lg:flex-row max-w-3xl mx-auto items-center gap-8 mt-8 lg:justify-between lg:mt-12">
+        <ul
+            class="text-[#737373] flex flex-col lg:flex-row max-w-3xl mx-auto items-center gap-8 mt-8 lg:justify-between lg:mt-12">
             <li><a>Home</a></li>
             <li><a>Services</a></li>
             <li><a>Portfolio</a></li>
