--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </head>
 
 <body>
-    <header class="bg-gray-100 px-5 lg:px-0">
-        <div class="navbar max-w-6xl mx-auto">
+    <header class="bg-gradient-to-b from-[rgb(255, 255, 255)] to-[rgba(255, 255, 255, 0)] px-5 lg:px-0">
+        <div class="navbar max-w-6xl mx-auto pt-8 lg:pt-14 ">
             <div class="navbar-start gap-2">
                 <i class="fa-solid fa-arrow-right text-white -rotate-45 bg-green-400 rounded-full p-2"></i>
                 <button class="text-3xl font-extrabold">Rinterio</button>
@@ -81,13 +81,13 @@
             </div>
         </div>
     </header>
-    <main class="bg-gray-100 px-5 lg:px-0">
+    <main class="bg-gray-100">
         <!-- We Design -->
-        <section class="max-w-6xl mx-auto mt-10 lg:mt-20  py-8 lg:py-20 relative">
+        <section class="max-w-6xl mx-auto mt-10 lg:mt-20 px-5 lg:px-0 py-8 lg:py-20 relative">
 
             <img class="hidden lg:block absolute top-5 -left-6" src="assets/Vector.png" alt="">
 
-            <div class="flex flex-col lg:flex-row justify-between gap-10">
+            <div class="flex flex-col items-center lg:flex-row justify-between gap-10">
                 <div class="w-full lg:w-[560px]">
                     <div class="text-center lg:text-start">
                         <button class="font-bold px-4 py-2 bg-white rounded-full"> <i
@@ -121,7 +121,7 @@
         </section>
 
         <!-- Our work -->
-        <section class="max-w-6xl mx-auto lg:pb-24">
+        <section class="max-w-6xl mx-auto px-5 lg:px-0 lg:pb-24 ">
             <div class="text-center">
                 <button class="font-bold mb-4 px-4 py-2 bg-white rounded-full"> <i
                         class="fa-solid fa-arrow-right  rounded-full p-2"></i> How we works</button>
@@ -154,52 +154,10 @@
             </div>
         </section>
 
-        <!-- Explore home in your town -->
-        <section class="bg-gray-100 mb-2 lg:pb-24">
-            <div class="max-w-6xl mx-auto rounded-2xl">
-                <div class="text-center bg-gray-100 lg:bg-white pb-8 pt-10 lg:pt-20 rounded-2xl">
-                    <h2 class="text-4xl mb-4 lg:mb-6 font-bold uppercase">Explore Home in your Town</h2>
-                    <p class="font-medium w-full lg:w-[670px] lg:mx-auto">The barn house captivates with its blend of
-                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
-                </div>
-                <div class="grid grid-cols-2 lg:grid-cols-4 gap-3 p-2 lg:gap-4 lg:bg-white bg-gray-100 rounded-2xl lg:pt-5">
-                    <div
-                        class="bg-[url('assets/pic1.jpeg')] bg-no-repeat w-full bg-center bg-cover lg:row-span-2 rounded-lg relative">
-                        <h2 class="text-xl font-medium absolute left-2 top-2">Gazaria</h2>
-                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
-                    </div>
-                    <div
-                        class="bg-[url('assets/pic2.webp')] bg-no-repeat w-full h-52 bg-center bg-cover rounded-lg relative">
-                        <h2 class="text-xl font-medium absolute left-2 top-2">Gazaria</h2>
-                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
-                    </div>
-                    <div
-                        class="bg-[url('assets/pic3.jpg')] bg-no-repeat w-full h-52 bg-center bg-cover rounded-lg relative">
-                        <h2 class="text-xl font-medium absolute left-2 top-2">Kawnia</h2>
-                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
-                    </div>
-                    <div
-                        class="bg-[url('assets/pic4.jpg')] bg-no-repeat w-full  bg-center bg-cover lg:row-span-2 rounded-lg relative">
-                        <h2 class="text-xl font-medium absolute left-2 top-2">Soloani</h2>
-                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
-                    </div>
-                    <div
-                        class="bg-[url('assets/pic5.avif')] bg-no-repeat w-full h-52 bg-center bg-cover rounded-lg relative">
-                        <h2 class="text-xl font-medium absolute left-2 top-2">Karim Kha</h2>
-                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
-                    </div>
-                    <div
-                        class="bg-[url('assets/pic6.jpg')] bg-no-repeat w-full h-52 bg-center bg-cover rounded-lg relative">
-                        <h2 class="text-xl font-medium absolute left-2 top-2">Santipur</h2>
-                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
-                    </div>
-                </div>
-            </div>
-        </section>
-
+        
         <!-- Portfolio -->
-        <section class="bg-gray-100 mb-2 lg:pb-24">
-            <div class="max-w-6xl mx-auto rounded-2xl">
+        <section class="bg-gray-100 lg:bg-white mb-2 px-5 lg:px-0 lg:pb-24">
+            <div class="max-w-6xl mx-auto ">
                 <div class="text-center bg-gray-100 lg:bg-white pb-8 pt-10 lg:pt-20">
                     <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F33] rounded-full"> <i
                             class="fa-solid fa-arrow-right  rounded-full p-2"></i> Explore our Latest works</button>
@@ -208,7 +166,7 @@
                         rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
                 <!-- portfolio grid -->
-                <div class="grid grid-cols-1 bg-gray-100 lg:bg-white lg:grid-cols-8 gap-6 pb-10">
+                <div class="grid grid-cols-1  lg:grid-cols-8 gap-6 pb-10">
                     <div
                         class="flex gap-6 flex-col lg:flex-row items-center lg:col-span-5 p-6 border-2 border-gray-200 rounded-2xl bg-white">
                         <img class="w-full lg:w-fit" src="assets/img1.png" alt="">
@@ -249,15 +207,57 @@
                 </div>
         </section>
 
+        <!-- Explore home in your town -->
+        <section class="bg-gray-100 lg:bg-white px-5 lg:px-0 lg:pb-24">
+            <div class="max-w-6xl mx-auto rounded-2xl">
+                <div class="text-center bg-gray-100 lg:bg-white pb-8 pt-10 lg:pt-20 rounded-2xl">
+                    <h2 class="text-4xl mb-4 lg:mb-6 font-bold uppercase">Explore Home in your Town</h2>
+                    <p class="font-medium w-full lg:w-[670px] lg:mx-auto">The barn house captivates with its blend of
+                        rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <div class="grid grid-cols-2 lg:grid-cols-4 gap-3 p-2 lg:gap-4 lg:bg-white bg-gray-100 rounded-2xl lg:pt-5">
+                    <div
+                        class="bg-[url('assets/pic1.jpeg')] bg-no-repeat w-full bg-center bg-cover lg:row-span-2 rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Gazaria</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                    <div
+                        class="bg-[url('assets/pic2.webp')] bg-no-repeat w-full h-52 lg:h-72 bg-center bg-cover rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Gazaria</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                    <div
+                        class="bg-[url('assets/pic3.jpg')] bg-no-repeat w-full h-52 lg:h-72 bg-center bg-cover rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Kawnia</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                    <div
+                        class="bg-[url('assets/pic4.jpg')] bg-no-repeat w-full  bg-center bg-cover lg:row-span-2 rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Soloani</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                    <div
+                        class="bg-[url('assets/pic5.avif')] bg-no-repeat w-full h-52 lg:h-72 bg-center bg-cover rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Karim Kha</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                    <div
+                        class="bg-[url('assets/pic6.jpg')] bg-no-repeat w-full h-52 lg:h-72 bg-center bg-cover rounded-lg relative">
+                        <h2 class="text-xl font-medium absolute left-2 top-2">Santipur</h2>
+                        <button class="btn btn-sm  font-medium text-xl absolute left-2 bottom-3 bg-gray-50">View Homes</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
         <!-- Project section -->
-        <section class="bg-gray-100 mt-2 ">
-            <div class="max-w-6xl mx-auto bg-[url('assets/bg.jpg')] bg-no-repeat w-full">
+        <section class="bg-[url('assets/bg.jpg')] bg-no-repeat w-full bg-center bg-cover px-6 lg:px-0 py-10 mt-10 lg:py-24 ">
+            <div class="max-w-6xl mx-auto">
                 <div class="text-center pb-8 pt-3 lg:pt-14">
                     <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F33] rounded-full"> <i
                             class="fa-solid fa-arrow-right  rounded-full p-2"></i> Let's Connect</button>
-                    <h2 class="text-4xl mb-4 lg:mb-6 font-bold">Our Works Process</h2>
+                    <h2 class="text-4xl mb-4 lg:mb-6 font-bold">Let's Discuss Next Project</h2>
                     <p class="font-medium w-full lg:w-[670px] lg:mx-auto">The barn house captivates with its blend of
                         rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
