--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
 
         <!-- Project section -->
-        <section class="bg-[url('assets/bg.jpg')] bg-no-repeat w-full bg-center bg-cover px-6 lg:px-0 py-10 mt-10 lg:py-24 ">
+        <section class="bg-[url('assets/bg.jpg')] bg-no-repeat w-full bg-center bg-cover px-6 lg:px-0 py-10  lg:py-24 ">
             <div class="max-w-6xl mx-auto">
                 <div class="text-center pb-8 pt-3 lg:pt-14">
                     <button class="font-bold mb-4 px-4 py-2 bg-[#ABEF5F33] rounded-full"> <i
